--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <input id="addTodoTextInput" type="text" autofocus>
   <button id="addTodoButton">Add</button>
+  <ul id="todoItems"></ul>
   <script src="js/script.js"></script>
 </body>
 </html>
