toggle all todos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>todo</title>
 </head>
 <body>
-  <input id="addTodoTextInput" type="text" autofocus>
-  <button id="addTodoButton">Add</button>
+  <div id="addTodoContainer">
+    <input id="addTodoTextInput" type="text" autofocus>
+    <button id="addTodoButton">Add</button>
+  </div>
   <ul id="todoItems"></ul>
   <script src="js/script.js"></script>
 </body>
