delete completed todos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="addTodoButton">Add</button>
   </div>
   <ul id="todoItems"></ul>
+  <div id="footer"></div>
   <script src="js/script.js"></script>
 </body>
 </html>
